Task #56 - Admin - getUsers search API + rearrange packages